--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<description>Servicios Web Certus de Prueba</description>
 	
 	<build>
-		<finalName>certus-facturehoy-ws-test</finalName>
+		<finalName>certus-facturehoy-ws</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -16,8 +16,8 @@
 				<version>3.1</version>
 				<configuration>
 					<!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
